[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radlex-order-harmonizer"
version = "0.1.0"
description = "Map local radiology procedure names to standardized RadLex Playbook identifiers."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Abinav Katuru" }]
keywords = [
    "radiology",
    "radlex",
    "playbook",
    "procedure-names",
    "harmonization",
    "mapping",
    "quality-improvement",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "rapidfuzz>=3.6",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
app = ["streamlit>=1.36"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "pandas-stubs",
    "types-PyYAML",
    "streamlit>=1.36",
]

[project.scripts]
radlex-harmonize = "radlex_order_harmonizer.cli:app"

[project.urls]
Homepage = "https://github.com/AKaturu/radlex-order-harmonizer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["numpy.*", "rapidfuzz.*", "streamlit.*", "numpy"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]
